force-app/main/default/objects/Monday_Automation_Test__c/Monday_Automation_Test__c.object-meta.xml
<CustomObject>
    <label>周一自动化测试</label>
    <nameField>
        <label>周一自动化测试名称</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>周一自动化测试</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>