force-app/main/default/objects/Monday_Automation_Test__c/fields/Automation_Source__c.field-meta.xml
<CustomField>
    <fullName>Automation_Source__c</fullName>
    <label>自动化来源</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cursor Automation</fullName>
            </value>
            <value>
                <fullName>GitHub Actions</fullName>
            </value>
            <value>
                <fullName>Manual Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>