force-app/main/default/objects/Monday_Automation_Test__c/fields/Execution_Result__c.field-meta.xml
<CustomField>
    <fullName>Execution_Result__c</fullName>
    <label>执行结果</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>