force-app/main/default/objects/Monday_Automation_Test__c/fields/Test_Name__c.field-meta.xml
<CustomField>
    <fullName>Test_Name__c</fullName>
    <label>测试名称</label>
    <length>100</length>
    <type>Text</type>
</CustomField>