force-app/main/default/objects/Monday_Automation_Test__c/fields/Test_Status__c.field-meta.xml
<CustomField>
    <fullName>Test_Status__c</fullName>
    <label>测试状态</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未开始</fullName>
            </value>
            <value>
                <fullName>进行中</fullName>
            </value>
            <value>
                <fullName>已通过</fullName>
            </value>
            <value>
                <fullName>未通过</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>